@startuml Diagrama de clases

class User{
    - int userId
    - String name
    - String userName
    - String password
    + boolean canCreateUser()
    + boolean canEditUser()
    + boolean canDeleteUser()
}

interface UserOperations{
    +User create(User user)
    +User findById(int id)
    +User update(User user)
    +Void delete(int userId)
    +List<User> getUsers()
}

class AdminUser{}   

class StandardUser{}

class UserService{
    -User currentUser
}

class UserController{}

class UserRegister{
    User[] users
}

class MainView{}

class UserLog{
    -String action
    -LocalDateTime timestamp
}



User <|-- AdminUser
User <|-- StandardUser
UserService <.. UserController
UserController <.. MainView
UserRegister <.. UserService
User "1" *-- "*" UserLog  
UserOperations <|.. UserService
UserRegister "1" o-- "*" User

@enduml